[package]

name = "av-compositor"
description = "Wayland compositor made for AvdanOS"
documentation = "https://docs.avdanos.org"
homepage = "https://avdanos.org"
license = "GPL-3.0"
version = "0.0.1"
authors = [
  "Zenails <zenailsc@gmail.com>",
  "Froxcey <froxcey@avdanos.com>",
  "Sammy <sammy99jsp@avdanos.com>",
]
edition = "2021"

[dependencies]

